# Automatic_Weight_Logging_System

./: .env  README.md  config.yaml  hmi_display.py  main.py  pyproject.toml  test_screen.py  test_vision.py
ble_receiver/: ble_sniffer.py  db_handler.py  face_engine.py  pyproject.toml
smart_scale_cv/: main.py  pyproject.toml  register_face.py  requirements.txt
