[project]
name = "smart_scale_cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "setuptools<82",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
